@@ -10,12 +10,7 @@
    // scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
    // resolvers += Resolver.url("typesafe", url("https://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
   //)
-lazy val root = (project in file(".")).
-  settings(
-    name := "hello-world",
-  test in Test := {
-      val _ = (g8Test in Test).toTask("").value
-    },
-    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
-    resolvers += Resolver.url("typesafe", url("https://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
-  ).enablePlugins(AssemblyPlugin)
+
+
+lazy val root = (project in file(".")).enablePlugins(PlayScala)
+
